horizontal scroll issue addressed

--- a/main.css
+++ b/main.css
@@ -150,8 +150,8 @@ margin-left: 44%;
 	width: 100%;
 	text-align: center;
 	/*padding-left: 45px;*/
-	margin-left: 1%;
-	margin-right: 1%;
+	margin-left: 0%;
+	margin-right: 0%;
 
 	padding-top: 50px;
 
